# find-french-startups

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
pages/: 1_Search.py  2_Company_Deep_Dive.py
src/invest_registry/: france_people.py  models.py  pagination.py  query_packs.py  scoring.py  settings.py  social_discovery.py  storage.py
src/invest_registry/clients/: france.py
static/: OFL-DMSans.txt  OFL-FiraCode.txt
tests/: test_collect_companies.py  test_france_dirigeants.py  test_normalization.py  test_pagination.py  test_query_packs.py  test_scoring.py  test_social_discovery.py
