[project]
name = "invest-registry"
version = "0.1.0"
description = "French company registry pull + Streamlit review report"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "tenacity>=8.2",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest_registry"]

